jellyfish-cli/com.ngc.seaside.jellyfish/src/test/resources/invalid-grammar-project/src/main/sd/com/ngc/seaside/threateval/EngagementTrackPriorityService.sd
package com.ngc.seaside.threateval

import com.ngc.seaside.threateval.datatype.TrackPriority
import com.ngc.seaside.engagementplanning.datatype.TrackEngagementStatus

model EngagementTrackPriorityService {
	metadata {
		"description": "Determines track priority of a SystemTrack based on planned, committed, and in-progress engagements.",
		"stereotypes": ["service"],
		"satisfies": ["TE0003", "TE0004"]
	}
	
	input {
		TrackEngagementStatus trackEngagementStatus
	}
	
	output {
		TrackPriority trackPriority
	}	
	
	scenario calculateTrackPriority {
		//link to white-paper or trade study in metadata
		when receiving trackEngagementStatus
		then willPublish trackPriority
	}
	
}
